Added ability to delete workouts, improved css for buttons. added hiding and change of title for different situations.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "tests/App2.tsx", "tests/Exercise3.jsx", "tests/App.tsx"],
+  "include": ["src", "tests/Exercise3.jsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
