--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-transition-group": "^4.4.10",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
+    "gym-tracker": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.1",
